# sonar-lark

./: .mcp.json  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  PHASE6_TESTING.md  PLAN.md  PLANNING-cameras.md  README.md  TODO.md
assets/color/: color_palette_64.hex  color_scheme.hex
assets/courses/: course_001.course.ron  course_002.course.ron  course_003.course.ron  course_004.course.ron  course_005.course.ron  course_006.course.ron  course_007.course.ron  course_008.course.ron  example.course.ron  kenner_course.course.ron  new_course.course.ron  test_course_01.course.ron  test_gate_direction.course.ron  testable_course.course.ron  tight_course.course.ron  tight_turns.course.ron  tiny_course.course.ron
assets/dev/: portrait_palette.ron
assets/league/: league_state.ron
assets/locations/: abandoned_warehouse.location.ron
assets/models/: crowd.glb  drone.glb  obstacles.glb
assets/pilots/: roster.pilots.ron
assets/shaders/: cel_halftone.wgsl  tron_skybox.wgsl
docs/: bevy-018.md  camera-system.md  drone-movement-research.md  drone-physics-deep-dive.md  drone-physics.md  drone-system.md  editor-system.md  game-design.md  maneuver-override-postmortem.md  pilot-system.md  post-phase-checklist.md  race-system.md  rendering.md  testing-conventions.md  types-reference.md
docs/archived/: next-drone-physics.md  presim-plan.md
src/: bounties.rs  main.rs  palette.rs  persistence.rs  states.rs  ui_theme.rs
src/camera/: chase.rs  fpv.rs  mod.rs  orbit.rs  settings.rs  spectator.rs  spring.rs  switching.rs
src/common/: course_topology.rs  drone_identity.rs  mod.rs  (+1 more)
(+136 files in other folders)
